Fixed groups name truncating

--- a/ota-plus-web/app/assets/css/sota-styles.scss
+++ b/ota-plus-web/app/assets/css/sota-styles.scss
@@ -403,7 +403,7 @@ button {
 
 .page-home {
     #groups-column {
-        width: 20%;
+        width: 350px;
         float: left;
         position: relative;
         z-index: 1;
@@ -452,13 +452,16 @@ button {
                 }
 
                 .group-text {
-                    width: auto;
+                    width: 62%;
                     margin: 0 0 0 15px;
                     display: inline-block;
                     vertical-align: middle;
 
                     .group-title {
                         font-size: 20px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
 
                     .group-subtitle {
